# wikipedia-archive-reader

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
src/: lib.rs
tests/: test_archive_reader.py
