[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wikipedia-archive-reader"
version = "0.1.0"
description = "Fast Python library for reading Wikipedia archives built with Rust"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[tool.maturin]
module-name = "wikipedia_archive_reader"
